--- a/grid-layout.html
+++ b/grid-layout.html
@@ -14,9 +14,13 @@
 
     #container {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-auto-rows: minmax(80px, auto);
       gap: 4px 10px;
+      /* grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-auto-rows: minmax(80px, auto); */
+      grid-template-areas: 
+      "header header header"
+      "sidebar content content"
+      "a footer footer";
     }
 
     .item {
@@ -24,17 +28,27 @@
     }
 
     .item1 {
-      grid-column-start: 1;
+      /* grid-column-start: 1;
       grid-column-end: 3;
       grid-row-start: 1;
-      grid-row-end: 3;
+      grid-row-end: 3; */
+      grid-area: header;
+    }
+
+    .item2 {
+      grid-area: sidebar;
     }
 
     .item3 {
-      grid-column-start: 4;
+      /* grid-column-start: 4;
       grid-column-end: 5;
       grid-row-start: 1;
-      grid-row-end: 3;
+      grid-row-end: 3; */
+      grid-area: content;
+    }
+
+    .item4{
+      grid-area: footer;
     }
 
   </style>
@@ -46,9 +60,9 @@
     <div class="item item2">2</div>
     <div class="item item3">3</div>
     <div class="item item4">4</div>
-    <div class="item item5">5</div>
+    <!-- <div class="item item5">5</div>
     <div class="item item6">6</div>
-    <div class="item item7">7</div>
+    <div class="item item7">7</div> -->
   </div>
 </body>
 </html>
