--- a/units.html
+++ b/units.html
@@ -8,7 +8,7 @@
 
   <style>
 
-    .box {
+    /* .box {
       background: red;
       height: 400px;
       width: 400px;
@@ -24,6 +24,41 @@
       background: #000000;
       height: 50%;
       width: 50%;
+    } */
+
+    html {
+      font-size: 1rem;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 12px;
+    }
+
+    .px {
+      font-size: 24px;
+      padding: 12px;
+      border-radius: 12px;
+    }
+
+    .mix{
+      font-size: 1.5em;
+      padding: 12px;
+      border-radius: 12px;
+    }
+
+    .em{
+      font-size: 1.5em;
+      padding: .5em;
+      border-radius: .5em;
+    }
+
+    .rem {
+      font-size: 1.5rem;
+      padding: .75rem;
+      border-radius: .75rem;
     }
 
   </style>
@@ -31,10 +66,17 @@
 </head>
 <body>
   
-  <div class="parent">
+  <!-- <div class="parent">
     <div class="children"></div>
   </div>
-  <div class="box"></div>
+  <div class="box"></div> -->
+
+  <div class="container">
+    <button class="btn px">Entrar</button>
+    <button class="btn mix">Entrar</button>
+    <button class="btn em">Entrar</button>
+    <button class="btn rem">Entrar</button>
+  </div>
 
 </body>
 </html>
