descendent and child selector

--- a/nested.html
+++ b/nested.html
@@ -11,6 +11,14 @@
     section#box.x.y {
       background: red;
     }
+    
+    div > p {
+      background: gray;
+    }
+
+    div span p {
+      background: blue;
+    }
 
   </style>
 
