--- a/nested.html
+++ b/nested.html
@@ -20,6 +20,26 @@
       background: blue;
     }
 
+    section + p {
+      background: green;
+    }
+
+    aside ~ p {
+      background: plum;
+    }
+
+    button ~ * {
+      background: gold;
+    }
+
+    div[x] {
+      background: brown;
+    }
+    
+    div[x="y"] {
+      background: purple;
+    }
+    
   </style>
 
 </head>
@@ -38,6 +58,17 @@
   <div>
     <span><p>Um &lt;p&gt; dentro de um &lt;span&gt; dentro de uma &lt;div&gt;</p></span>
   </div>
+
+  <p>Parágrafo</p>
+  <aside>Div</aside>
+  <p>Parágrafo depois da div</p>
+  <p>Parágrafo depois da div</p>
+  <button>botão</button>
+  <div>Div</div>
+  <aside>Div</aside>
+  <div x="y">Div</div>
+  <div x="z">Div</div>
+  <div x="t">Div</div>
   
 </body>
 </html>
