--- a/desafios/nivel1/perfil.html
+++ b/desafios/nivel1/perfil.html
@@ -8,7 +8,7 @@
 
   <style>
 
-    @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap');
 
     :root {
       font-size: 62.5%;
