--- a/desafios/nivel2/hero-Input.html
+++ b/desafios/nivel2/hero-Input.html
@@ -28,7 +28,7 @@
 
       background: #18161F;
 
-      /* padding: 4rem 7rem; */
+      padding: 1.7rem 4rem;
     }
 
     header {
@@ -80,7 +80,7 @@
       color: #FFFFFF;
       background: none;
       width: 200px;
-      height: 60px;
+      height: 50px;
       border-radius: 32px;
     }
 
