--- a/desafios/nivel3/stone/stone.html
+++ b/desafios/nivel3/stone/stone.html
@@ -113,7 +113,7 @@
     }
 
     .hero {
-      background-image: url(../nivel3/hero.png);
+      background-image: url(../stone/hero.png);
       background-size: 1359.67px 640px;
 
       width: 1280px;
@@ -616,7 +616,7 @@
         <button class="descubra">Descubra suas taxas</button>
       </div>
 
-      <div class="container2"><img src="../nivel3/maquina.png" alt=""></div>
+      <div class="container2"><img src="../stone/maquina.png" alt=""></div>
 
     </div>
 
@@ -625,7 +625,7 @@
   <section class="frame2">
     <div class="content2">
       
-      <div class="container3"><img src="../nivel3/maquina2.png" alt=""></div>
+      <div class="container3"><img src="../stone/maquina2.png" alt=""></div>
       
       <div class="container4">
         <div class="h4">MAQUININHA DE CARTÃO</div>
@@ -673,13 +673,13 @@
         </button>
 
         <div class="aplicativos">
-          <div class="google"><img src="../nivel3/google.png" alt=""></div>
-          <div class="apple"><img src="../nivel3/apple.png" alt=""></div>
+          <div class="google"><img src="../stone/google.png" alt=""></div>
+          <div class="apple"><img src="../stone/apple.png" alt=""></div>
         </div>
 
       </div>
 
-      <div class="container6"><img src="../nivel3/maquina3.png" alt=""></div>
+      <div class="container6"><img src="../stone/maquina3.png" alt=""></div>
     </div>
 
   </section>
