--- a/desafios/nivel3/stone/stone.html
+++ b/desafios/nivel3/stone/stone.html
@@ -43,6 +43,10 @@
       height: 3354px;
     }
 
+    button {
+      cursor: pointer;
+    }
+
     header {
       width: 1280px;
       height: 72px;
@@ -100,6 +104,10 @@
       margin-left: 1rem;
     }
 
+    .login:hover {
+      background: var(--bg-principal);
+    }
+
     .stone {
       width: 121px;
       height: 48px;
@@ -110,6 +118,11 @@
       background: var(--bg-light);
 
       margin-left: 1.6rem;
+    }
+
+    .stone:hover {
+      background: var(--bg-principal);
+      border: 2px solid var(--light-quaternary);
     }
 
     .hero {
@@ -216,6 +229,10 @@
       background: var(--bg-light);
       border-radius: 90px;
       border: none;
+    }
+
+    .descubra:hover {
+      background: var(--bg-principal);
     }
 
     .container2 img, .container3 img, .container6 img {
@@ -432,6 +449,10 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 24px;
+    }
+
+    .descubra2:hover, .abra-sua-conta:hover {
+      background: var(--bg-principal);
     }
 
     .abra-sua-conta {
