--- a/desafios/nivel3/mercado-pago/mercado-pago.html
+++ b/desafios/nivel3/mercado-pago/mercado-pago.html
@@ -92,6 +92,11 @@
       line-height: 20px;
     }
 
+    button {
+      cursor: pointer;
+      border: none;
+    }
+
     .frame1 {
       width: 1280px;
       height: 64px;
@@ -124,10 +129,6 @@
       height: 40px;
       left: 397px;
       top: 12px;
-    }
-
-    button {
-      border: none;
     }
 
     .container1-2 .text {
@@ -175,6 +176,10 @@
       border-radius: 4px;
     }
 
+    .container1-4:hover, .container1-4:hover .text {
+      background: var(--blue-secondary-2);
+    }
+
     .container1-4 .text {
       width: 41px;
       height: 20px;
@@ -210,6 +215,10 @@
       background: var(--blue-primary-1);
     }
 
+    .container1-5:hover, .container1-5:hover .text {
+      background: var(--blue-primary-2);
+    }
+
     .container1-6 {
       box-sizing: border-box;
 
@@ -239,8 +248,6 @@
     .frame2 {
       width: 1280px;
       height: 50px;
-
-      /* background: var(--light-2); */
     }
 
     .frame2 .body {
@@ -353,6 +360,10 @@
       color: var(--dark-3);
     }
 
+    .telefone .button2:hover {
+      background: var(--dark-4);
+    }
+
     .container4-1, .container4-2 {
       box-sizing: border-box;
 
@@ -428,6 +439,10 @@
       height: 20px;
 
       color: var(--light-1);
+    }
+
+    .container4-1 .button1:hover, .container4-2 .button1:hover {
+      background: var(--blue-primary-2);
     }
 
     .container4-2 .text {
