--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <a class="link bio" href="./bio.html">link da bio</a>
       <br />
       <a class="link" href="http://google.com" target="_blank">link do google</a>
+      <br />
+      <a class="link" href="./desafios/nivel3/stone/stone.html">Stone</a>
+      <br />
+      <a class="link" href="./desafios/nivel3/mercado-pago/mercado-pago.html">Mercado Pago</a>
     </div>
   </body>
 </html>
