--- a/desafios/nivel3/stone/stone.html
+++ b/desafios/nivel3/stone/stone.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stone</title>
+  <link rel="shortcut icon" type="image/png" href="https://www.stone.com.br/images/favicon.ico" />
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600;700&display=swap');
