--- a/desafios/nivel3/mercado-pago/mercado-pago.html
+++ b/desafios/nivel3/mercado-pago/mercado-pago.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercado Pago</title>
+  <link rel="shortcut icon" type="image/png" href="https://http2.mlstatic.com/frontend-assets/mp-web-navigation/ui-navigation/5.19.1/mercadopago/favicon.svg" />
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&display=swap');
