--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -87,8 +87,8 @@
       padding: 2rem;
       gap: 1rem;
 
-      width: 36rem;
-      height: 8.4rem;
+      /* width: 36rem;
+      height: 8.4rem; */
 
       background: var(--black1);
     }
@@ -99,8 +99,8 @@
       align-items: center;
       /* gap: 85.1rem; */
 
-      width: 32rem;
-      height: 4.4rem;
+      /* width: 32rem;
+      height: 4.4rem; */
     }
 
     .logo {
