--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -255,6 +255,15 @@
     #services .card img {
       width: 320px;
       height: 324px;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    #services .card .imagem {
+      width: 320px;
+      height: 324px;
+      max-width: 100%;
+      max-height: 100%;
     }
 
     #services .card .texto {
@@ -265,9 +274,11 @@
       /* gap: 10px; */
 
       width: 32rem;
-      height: 17.6rem;
+      height: 16.6rem;
 
       background: var(--white2);
+      max-width: 100%;
+      max-height: 100%;
     }
 
     #services .card .texto h1 {
