--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -211,6 +211,12 @@
       height: 330.74px;
     }
 
+    .imagem {
+      display: flex;
+      align-items: center;
+      margin-inline: auto;
+    }
+
 
     /*-------- SERVICES --------*/
 
