--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -148,6 +148,7 @@
       display: flex;
       flex-direction: row;
       align-items: flex-start;
+      justify-content: center;
       padding: 4.8rem 2rem 0px;
       gap: 1rem;
 
