--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -132,6 +132,11 @@
       background: none;
     }
 
+    header button:hover .text {
+      color: #D9D9D9;
+;
+    }
+
     header button .text {
       width: 160px;
       height: 20px;
@@ -197,6 +202,10 @@
 
       margin-inline: auto;
       margin-bottom: 4.8rem;
+    }
+
+    .container1-1 button:hover {
+      background: #941B1D;
     }
 
     .container1-1 button .text {
