--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -649,6 +649,17 @@
         height: 400px;
       }
 
+      /*-------- FOOTER --------*/
+
+      footer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        padding: 0 7.2rem;
+      }
+
     }
 
   </style>
@@ -749,7 +760,7 @@
 
     <div class="footer-text">
       <h1 class="regular">Sir<strong>Barber</strong></h1>
-      <p class="md regular">©2022 - SirBarber.<br>
+      <p class="md regular">&copy;2022 - SirBarber.<br>
         Todos os direitos reservados.</p>
     </div>
 
