--- a/desafios/nivel3/local-business/barber-shop/barber-shop.html
+++ b/desafios/nivel3/local-business/barber-shop/barber-shop.html
@@ -441,6 +441,10 @@
       color: #FFFAF1;
     }
 
+    .footer-text p span {
+      display: block;
+    }
+
     .footer-social {
       display: flex;
       flex-direction: row;
@@ -657,8 +661,39 @@
         align-items: center;
         justify-content: space-between;
 
-        padding: 0 7.2rem;
+        padding: 4.8rem 7.2rem;
       }
+
+      footer .footer-text {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 10px;
+
+        max-width: 379px;
+        height: 90px;
+      }
+
+      footer .footer-text h1 {
+        width: 228px;
+        height: 56px;
+
+        font-size: 48px;
+        line-height: 56px;
+      }
+
+      footer .footer-text p {
+        width: 379px;
+        height: 24px;
+
+        font-size: 16px;
+        line-height: 24px;
+      }
+
+      .footer-text p span {
+      display: inline-block;
+    }
 
     }
 
@@ -760,8 +795,7 @@
 
     <div class="footer-text">
       <h1 class="regular">Sir<strong>Barber</strong></h1>
-      <p class="md regular">&copy;2022 - SirBarber.<br>
-        Todos os direitos reservados.</p>
+      <p class="md regular">&copy;2022 - SirBarber. <span>Todos os direitos reservados.</span></p>
     </div>
 
     <div class="footer-social">
